# MetaGal

./: README.md  pipeline.py  pyproject.toml  requirements.txt
config/: config.yaml  config_nanopore.yaml
metagal/: __init__.py  denoising.py  diversity.py  quality_control.py  taxonomy.py  trimming.py  visualisation.py
scripts/: epi2me_import.py
tests/: test_diversity.py  test_nanopore.py  test_pipeline.py  test_taxonomy.py  test_trimming.py
